[package]
name = "druid"
version = "0.1.0"
edition = "2024"

[lib]
bench = false
[dependencies]
rand = "0.9.4"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "rayon"] }
cuid2 = "0.1.4"
rayon = "1.12.0"
[dependencies.uuid]
version = "1.23.0"
# Lets you generate random UUIDs
features = ["v4"]

[[bench]]
name = "druid"
harness = false
